Upgraded gradle plugin. Also created a new class for game components.